--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ webencodings==0.5.1
 wkhtmltopdf==0.2
 xhtml2pdf==0.2.3
 psycopg2-binary==2.9.9
+gunicorn==20.1.0
+whitenoise==6.5.0
+dj-database-url==2.1.0
