--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,23 @@
-cairocffi==1.0.2
-CairoSVG==2.3.0
-cffi==1.12.2
-cssselect2==0.2.1
-defusedxml==0.5.0
-Django==2.1.7
-html5lib==1.0.1
-pdfkit==0.6.1
-Pillow==5.4.1
-pycparser==2.19
-PyPDF2==1.26.0
-Pyphen==0.9.5
-pytz==2018.9
-reportlab==3.5.13
-six==1.12.0
-tinycss2==1.0.1
-WeasyPrint==46
-webencodings==0.5.1
-wkhtmltopdf==0.2
-xhtml2pdf==0.2.3
-psycopg2-binary==2.9.9
-gunicorn==20.1.0
+Django==4.2.7
+psycopg2-binary==2.9.7
+scikit-learn==1.3.0
+pandas==2.0.3
+numpy==1.24.3
+joblib==1.3.1
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.15.0
+xgboost==1.7.6
+lightgbm==4.0.0
+catboost==1.2
+imbalanced-learn==0.11.0
+scipy==1.11.1
+Pillow==10.0.0
+requests==2.31.0
+python-decouple==3.8
 whitenoise==6.5.0
-dj-database-url==2.1.0
+gunicorn==21.2.0
+scikit-learn==1.3.2
+joblib==1.3.2
+pandas==2.1.4
+numpy==1.24.4
