--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Django==4.2.7
 psycopg2-binary==2.9.7
-pandas==2.0.3
-numpy==1.24.3
-joblib==1.3.1
+scikit-learn==1.3.2
+pandas==2.1.4
+numpy==1.24.4
+joblib==1.3.2
 matplotlib==3.7.2
 seaborn==0.12.2
 plotly==5.15.0
@@ -16,7 +17,6 @@ requests==2.31.0
 python-decouple==3.8
 whitenoise==6.5.0
 gunicorn==21.2.0
-scikit-learn==1.3.2
-joblib==1.3.2
-pandas==2.1.4
-numpy==1.24.4
+reportlab==4.0.7
+xhtml2pdf==0.2.11
+WeasyPrint==60.2
